--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
 		"dotenv": "6.0.0",
 		"graphql": "^0.13.2",
 		"graphql-cli": "^2.16.7",
+		"graphql-redis-subscriptions": "^2.0.0",
 		"graphql-yoga": "1.16.2",
 		"jsonwebtoken": "8.3.0",
 		"nodemailer": "^4.6.8",
