--- a/fe/package.json
+++ b/fe/package.json
@@ -11,6 +11,7 @@
         "apollo-link-ws": "^1.0.7",
         "apollo-upload-client": "^10.0.0",
         "apollo-utilities": "^1.0.27",
+        "glamor": "^2.20.40",
         "graphql": "^14.0.2",
         "graphql-tag": "^2.9.2",
         "react": "^16.6.3",
