Search and autocomplete implementation

--- a/fe/package.json
+++ b/fe/package.json
@@ -11,9 +11,11 @@
         "apollo-link-ws": "^1.0.7",
         "apollo-upload-client": "^10.0.0",
         "apollo-utilities": "^1.0.27",
+        "downshift": "^3.1.12",
         "glamor": "^2.20.40",
         "graphql": "^14.0.2",
         "graphql-tag": "^2.9.2",
+        "lodash.debounce": "^4.0.8",
         "react": "^16.6.3",
         "react-adopt": "^0.6.0",
         "react-apollo": "^2.3.3",
