Added functionality so that duplicate conversations (array of users) are not created - simply redirects to existing conversation

--- a/fe/.vscode/settings.json
+++ b/fe/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
-	"workbench.colorCustomizations": {
-		"titleBar.activeForeground"  : "#000",
-		"titleBar.inactiveForeground": "#000000CC",
-		"titleBar.activeBackground"  : "#03B5AA",
-		"titleBar.inactiveBackground": "#03B5AACC"
-	}
+    "workbench.colorCustomizations": {
+        "titleBar.activeForeground"  : "#000",
+        "titleBar.inactiveForeground": "#000000CC",
+        "titleBar.activeBackground"  : "#03B5AA",
+        "titleBar.inactiveBackground": "#03B5AACC"
+    },
+    "prettier.printWidth": 100
 }
